<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <Button
        android:id="@+id/gamePlayer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/title_vsPlayer"
        app:layout_constraintBottom_toTopOf="@+id/gamePc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/gamePc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/title_vsComputer"
        app:layout_constraintBottom_toTopOf="@+id/dailyChallenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"/>

    <Button
        android:id="@+id/dailyChallenge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/title_daily"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/title_settings"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pieces_white_king"
        android:contentDescription="@string/king_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>